--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 Testapp
-<a href="http://192.168.211.168/h2go/5.3_20141030_ontwikkel_webapp_denhaag/denhaag/index.php?r=fotoInspectie">testje</a>
+<a href="https://demo.h2go.nl/intranet/">testje</a>
